<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500">

    <EditText
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:hint="@string/hint_name"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="@dimen/size_edit_text" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_clear"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_content_descript"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_7"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_8"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_9"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_divide"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_4"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_5"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_6"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_multi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_multiply"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_1"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_2"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_3"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/brn_minus"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_0"
            android:textColor="@color/white"

            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/brn_point"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_1"
            android:text="@string/btn_equal"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/btn_plus"
            android:textColor="@color/white"
            android:textSize="@dimen/size_button" />


    </GridLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/content_descript"
        android:scaleType="centerInside"
        android:src="@drawable/ic_calculator_32229" />


</FrameLayout>